fixed homepage white spaces

--- a/css/index.css
+++ b/css/index.css
@@ -170,12 +170,13 @@ header {
   font-size: 2rem;
   letter-spacing: 0.25rem;
   margin: 2rem;
+  margin-bottom: 1rem;
   padding: 0.5rem 0;
 }
 
 .hero-para {
   font-size: 1rem;
-  margin: 1rem 2rem;
+  margin: 2rem 2rem;
   padding: 1rem 0;
   max-width: 20rem;
   line-height: 1.5rem;
